@@ -1,5 +1,12 @@
 2006-04-20  David Reveman  <davidr@novell.com>
 
+	* src/window.c:
+	* src/event.c (handleEvent):
+	* src/display.c:
+	* include/compiz.h:
+	* gnome/window-decorator/gnome-window-decorator.c: Add force quit
+	dialog.
+
 	* plugins/resize.c: Changed default binding to Button2.
 
 	* src/display.c (LOWER_WINDOW_BUTTON_DEFAULT): Button2 -> 6.
